RESOLVED FIXED62541
[GTK] Fix a crash when drawing area has been deleted
https://bugs.webkit.org/show_bug.cgi?id=62541
Summary [GTK] Fix a crash when drawing area has been deleted
Carlos Garcia Campos
Reported 2011-06-13 05:55:57 PDT
We should check whether WebPageProxy::drawingArea() returns a valid pointer before using it, it might be null, for example, when the web process crashes.
Attachments
Patch (1.98 KB, patch)
2011-06-13 05:57 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2011-06-13 05:57:58 PDT
Carlos Garcia Campos
Comment 2 2011-06-13 10:14:53 PDT
Note You need to log in before you can comment on or make changes to this bug.